app/javascript/flavours/polyam/styles/components/columns.scss
/* ... */
.onboarding__illustration {
  display: block;
  margin: 0 auto;
  margin-bottom: 10px;
  max-height: 200px;
  width: auto;
}

.onboarding__lead {
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  color: $darker-text-color;
  text-align: center;
  margin-bottom: 30px;

  strong {
    font-weight: 700;
    color: $secondary-text-color;
  }
}

.onboarding__links {
  margin-bottom: 30px;

  & > * {
    margin-bottom: 2px;

    &:last-child {
      margin-bottom: 0;
    }
  }
}

.onboarding__steps {
  margin-bottom: 30px;

  &__item {
    background: lighten($ui-base-color, 4%);
    border: 0;
    border-radius: 8px;
    display: flex;
    width: 100%;
    box-sizing: border-box;
    align-items: center;
    gap: 10px;
    padding: 10px;
    padding-inline-end: 15px;
    margin-bottom: 2px;
    text-decoration: none;
    text-align: start;

    &:hover,
    &:focus,
    &:active {
      background: lighten($ui-base-color, 8%);
    }

    &__icon {
      flex: 0 0 auto;
      border-radius: 50%;
      display: none;
      align-items: center;
      justify-content: center;
      width: 36px;
      height: 36px;
      color: $highlight-text-color;
      font-size: 1.2rem;

      @media screen and (width >= 600px) {
        display: flex;
      }
    }

    &__progress {
      flex: 0 0 auto;
      background: $valid-value-color;
      border-radius: 50%;
      display: flex;
      align-items: center;
      justify-content: center;
      width: 21px;
      height: 21px;
      color: $primary-text-color;

      svg {
        height: 14px;
        width: auto;
      }
    }

    &__go {
      flex: 0 0 auto;
      display: flex;
      align-items: center;
      justify-content: center;
      width: 21px;
      height: 21px;
      color: $highlight-text-color;
      font-size: 17px;

      svg {
        height: 1.5em;
        width: auto;
      }
    }

    &__description {
      flex: 1 1 auto;
      line-height: 20px;

      h6 {
        color: $highlight-text-color;
        font-weight: 500;
        font-size: 14px;
        overflow: hidden;
        text-overflow: ellipsis;
      }

      p {
        color: $darker-text-color;
        overflow: hidden;
        text-overflow: ellipsis;
      }
    }
  }
}

.onboarding__progress-indicator {
  display: flex;
  align-items: center;
  margin-bottom: 30px;
  position: sticky;
  background: $ui-base-color;

  @media screen and (width >= 600) {
    padding: 0 40px;
  }

  &__line {
    height: 4px;
    flex: 1 1 auto;
    background: lighten($ui-base-color, 4%);
  }

  &__step {
    flex: 0 0 auto;
    width: 30px;
    height: 30px;
    background: lighten($ui-base-color, 4%);
    border-radius: 50%;
    color: $primary-text-color;
    display: flex;
    align-items: center;
    justify-content: center;

    svg {
      width: 15px;
      height: auto;
    }

    &.active {
      background: $valid-value-color;
    }
  }

  &__step.active,
  &__line.active {
    background: $valid-value-color;
    background-image: linear-gradient(
      90deg,
      $valid-value-color,
      lighten($valid-value-color, 8%),
      $valid-value-color
    );
    background-size: 200px 100%;
    animation: skeleton 1.2s ease-in-out infinite;
  }
}

.follow-recommendations {
  background: darken($ui-base-color, 4%);
  border-radius: 8px;
  margin-bottom: 30px;

  .account:last-child {
    border-bottom: 0;
  }

  &__empty {
    text-align: center;
    color: $darker-text-color;
    font-weight: 500;
    padding: 40px;
  }
}

.tip-carousel {
  border: 1px solid transparent;
  border-radius: 8px;
  padding: 16px;
  margin-bottom: 30px;

  &:focus {
    outline: 0;
    border-color: $highlight-text-color;
  }

  .media-modal__pagination {
    margin-bottom: 0;
  }
}

.copy-paste-text {
  background: lighten($ui-base-color, 4%);
  border-radius: 8px;
  border: 1px solid lighten($ui-base-color, 8%);
  padding: 16px;
  color: $primary-text-color;
  font-size: 15px;
  line-height: 22px;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  transition: border-color 300ms linear;
  margin-bottom: 30px;

  &:focus,
  &.focused {
    transition: none;
    outline: 0;
    border-color: $highlight-text-color;
  }

  &.copied {
    border-color: $valid-value-color;
    transition: none;
  }

  textarea {
    width: 100%;
    height: auto;
    background: transparent;
    color: inherit;
    font: inherit;
    border: 0;
    padding: 0;
    margin-bottom: 30px;
    resize: none;

    &:focus {
      outline: 0;
    }
  }
}

.dismissable-banner,
.warning-banner {
  position: relative;
  margin: 10px;
  margin-bottom: 5px;
  border-radius: 8px;
  border: 1px solid $highlight-text-color;
  background: rgba($highlight-text-color, 0.15);
  overflow: hidden;

  &__background-image {
    width: 125%;
    position: absolute;
    bottom: -25%;
    inset-inline-end: -25%;
    z-index: -1;
    opacity: 0.15;
    mix-blend-mode: luminosity;
  }

  &__message {
    flex: 1 1 auto;
    padding: 15px;
    font-size: 15px;
    line-height: 22px;
    font-weight: 500;
    color: $primary-text-color;

    p {
      margin-bottom: 15px;

      &:last-child {
        margin-bottom: 0;
      }
    }

    h1 {
      color: $highlight-text-color;
      font-size: 22px;
      line-height: 33px;
      font-weight: 700;
      margin-bottom: 15px;
    }

    &__actions {
      display: flex;
      flex-wrap: wrap;
      gap: 4px;

      &__wrapper {
        display: flex;
        margin-top: 30px;
      }

      .button {
        display: block;
        flex-grow: 1;
      }
    }

    .button-tertiary {
      background: rgba($ui-base-color, 0.15);
      backdrop-filter: blur(8px);
    }
  }

  &__action {
    float: right;
    padding: 15px 10px;

    .icon-button {
      color: $highlight-text-color;
    }
  }
}
/* ... */

